Edited wiki page FeatureIdeas through web user interface.

--- a/wiki/FeatureIdeas.wiki
+++ b/wiki/FeatureIdeas.wiki
@@ -7,7 +7,7 @@ Here's a list of some of the future features for SwitchList.  Add your own ideas
 
 = Car Movement Ideas =
 
- * Variable unloading times.  Let some cars sit for two days, other for one.
+ * Variable unloading times.  Let some cargo require two days to unload, and others one.
  * Add support for setting minimum and maximum train lengths.
  * Provide siding length for each industry, and make sure there's space for cars being dropped off.
  * Make sure all switchlists and documents are presenting door assignments, and sorting lists by door.
