--- a/wiki/FeatureIdeas.wiki
+++ b/wiki/FeatureIdeas.wiki
@@ -27,3 +27,4 @@ Here's a list of some of the future features for SwitchList.  Add your own ideas
 
 = Overall Experience =
  * Print Everything.  If you try to print from the main menu, a (currently disabled) feature would print switchlists for all trains on your layout at once.  Get this working again.  Use a dialog with checkboxes to allow the user to select which subset of switchlists and yard reports to print.
+* Improve the first pages of the web interface - it's currently bare-bones text.
