--- a/wiki/NewSwitchListStyle.wiki
+++ b/wiki/NewSwitchListStyle.wiki
@@ -1,3 +1,4 @@
+#summary Learn how to create your own SwitchList printed forms.
 = Creating New SwitchList Styles =
 
 One of SwitchList's neat features is the ability to print the crew's work orders in a form that matches what the real crews would use on your railroad.  Although SwitchList supports a range of switchlist templates (including a Southern Pacific-style narrow switchless, the Large Type version better suited for garage layouts, or the San Francisco Belt Railroad's B-7 form), you may want to duplicate a particular railroad's format.  Luckily, it's possible with a bit of programming to contribute your favorite switchlist format to SwitchList.
