Edited wiki page MakeDistribution through web user interface.

--- a/wiki/MakeDistribution.wiki
+++ b/wiki/MakeDistribution.wiki
@@ -8,21 +8,21 @@ Steps for building a new release.
 
 To make a distribution:
 
-1) Re-run /Developer/Applications/Utilities/Help Indexer 
+1) Re-run `/Developer/Applications/Utilities/Help Indexer` 
 
-2) Update version number in InfoPlist.strings
+2) Update version number in `InfoPlist.strings`
 
-3) Checkin changed HelpIndexer file and InfoPlist.strings file.
+3) Check-in changed HelpIndexer file and `InfoPlist.strings` file.
 
-4) build/switchlistTag SwitchList.version.with.dots
+4) Run the script `build/switchlistTag SwitchList.version.with.dots`.  (Replace SwitchList.version.with.dots with `SwitchList.0.7.1` or some such string.)
 
-5) Run build/makeDistribution SwitchList.version.with.dots
+5) Run `build/makeDistribution SwitchList.version.with.dots`
 
 6) Test
 
-7) Copy /tmp/SwitchList-version.dmg to /Volumes/rbowdidge/Sites/railroad/SwitchList-version.dmg
+7) Copy `/tmp/SwitchList-version.dmg` to `/Volumes/rbowdidge/Sites/railroad/SwitchList-version.dmg`
 
-8) Copy /tmp/SwitchList-version.dmg to /Volumes/rbowdidge/Sites/railroad/SwitchList.dmg
+8) Copy` /tmp/SwitchList-version.dmg` to `/Volumes/rbowdidge/Sites/railroad/SwitchList.dmg`
 
 9) Update web page to show new version.
 
