--- a/wiki/FeatureIdeas.wiki
+++ b/wiki/FeatureIdeas.wiki
@@ -18,6 +18,8 @@ Here's a list of some of the future features for SwitchList.  Add your own ideas
  * Automatically create divisions based on the railroad and location, and do an initial placement of cars in divisions.
  * Change division idea to something closer to "where is this car allowed to leave the layout?"
 
+* Add features that would be helpful for a Freemo-like group where layouts are set up differently each time and where the attending module owners may vary or change.  Example of features might be reordering towns quickly, enabling or disabling groups of cars based on owners, automatically come up with cargos based on the industry, etc.
+
 = Switch List Ideas = 
  * More realistic switch list forms.
  * Create better forms and documents for running an active yard.
