--- a/wiki/Versions.wiki
+++ b/wiki/Versions.wiki
@@ -7,6 +7,10 @@ Master list of public releases of SwitchList.
 
 = Details =
 
+Version 0.7.4 (8/23/2011).  Simplifies messing with the web server display by using HTML templates and a templating engine.
+
+Version 0.7.3 (8/21/2011).  This release is all about improving the web server feature.  The web server now shows a window when it's active showing the URL for reaching the server, and uses IP addresses ("10.0.0.7") instead of long names to make typing in the server's address easier.  The web interface also now has a list of cars grouped by industry for easier setup.
+
 Version 0.7.2 (6/21/2011). This release provides a much-improved PICL report switchlist (thanks to James McNab!).  It also includes many cleanup changes to the switchlist display and printing code.  These changes make it easy to write your own switch list format, and may make the code work better on non-US sized paper.
 
 5/9/2011: Announced that SwitchList is now an open source project.
