--- a/wiki/SwitchListTemplatesInHTML.wiki
+++ b/wiki/SwitchListTemplatesInHTML.wiki
@@ -27,7 +27,7 @@ Templates can also loop using {% %} tags to group commands in the template langu
 }}}
 Templates can also use conditions.  This snippet either prints "LOADED" if the freight car has a cargo and the cargo is currently loaded in the car, and "EMPTY" otherwise:
 {{{
-(% if freightCar.isLoaded %} LOADED {% else %} EMPTY {% /if} 
+{% if freightCar.isLoaded %} LOADED {% else %} EMPTY {% /if %} 
 }}}
 See the full <A HREF="http://mattgemmell.com/2008/05/20/mgtemplateengine-templates-with-cocoa">documentation for MGTemplateEngine</a> to learn more about what you can put in templates, or look at some of the example switchless.
 
@@ -41,15 +41,25 @@ would display the layout name in all capital letters.  MGTemplateEngine also def
 
 SwitchList also defines its own handy filters.  The jitter filter adds some random spaces at the beginning, middle, or end of a string so that identical strings arranged vertically won't perfectly line up.  This is very helpful for making switchlists with handwritten fonts look handwritten:
 {{{
-{{freightCar.reportingMarks | jitter}}  See the Handwritten switchlist for an example of jitter's use.
+{{freightCar.reportingMarks | jitter}}  
 }}}
-== Creating your own SwitchList: ==
+See the default switchlist for an example of jitter's use.
 
-To create your own special switchlist, create a folder in ~/Library/Application Support/SwitchList with the name of your switch list style, and place a switchlist.html and, if you want, switchlist.css file in there to get started.  For example, if I wanted a new switchlist called "WP", I would make sure the SwitchList folder existed in Library/Application Support, then create a new directory called WP in that folder.  A file in that folder called switchlist.html would hold the template for the switchlist, and a Cascading Style Sheets (CSS) file called "switchlist.css could be placed in the same directory to hold formatting details for the switchlist.  (Look around on the internet for details about CSS files.)   For security, SwitchList only allows files in the template directory to be read from your machine, though a template could load images and other files out on the Internet.
+== Creating your own SwitchList ==
 
-== Example Switchlist Template ==
+To create your own special switchlist, create a folder in ~/Library/Application Support/SwitchList with the name of your switch list style, and place a switchlist.html and, if you want, switchlist.css file in there to get started.
 
-The Thomas switchlist template uses large text written in the Comic Sans handwritten font and a cartoon picture of a train to display a switchlist more suitable for the four-year-old model railroaders on your layout.  It loads the pictures from the Internet, and positions the pictures using standard HTML formatting.  It loops over all cars with some lines like this:
+For example, if I wanted a new switchlist called "WP", I would make sure the SwitchList folder existed in Library/Application Support, then create a new directory called WP in that folder.  A file in that folder called switchlist.html would hold the template for the switchlist, and a Cascading Style Sheets (CSS) file called "switchlist.css could be placed in the same directory to hold formatting details for the switchlist.  (Look around on the internet for details about CSS files.)   For security, SwitchList only allows files in the template directory to be read from your machine, though a template could load images and other files out on the Internet.
+
+== Example Switchlist Template: Thomas  ==
+
+The Thomas switchlist template uses large text written in the Comic Sans handwritten font and a cartoon picture of a train to display a switchlist more suitable for the four-year-old model railroaders on your layout.  It loads the pictures from the Internet, and positions the pictures using standard HTML formatting.
+
+Here is an example of the Thomas switchlist style in action: [http://homepage.mac.com/rbowdidge/railroad/Thomas.html]
+
+Here is the HTML template that creates it: [http://code.google.com/p/switchlist/source/browse/trunk/template_examples/Thomas/switchlist.html]
+
+The Thomas template loops over all cars with some lines like this:
 {{{
 <ol>
 {% for car in train.allFreightCarsInVisitOrder %}
