--- a/wiki/SwitchListTemplatesInHTML.wiki
+++ b/wiki/SwitchListTemplatesInHTML.wiki
@@ -85,69 +85,33 @@ The following variables are accessible from templates:
 || layout || current layout. (Layout object) ||
 || randomValue || integer value between 0 and 9, used for putting fingerprints, dogear or other bits of realism on switchlists. ||
 
-Some of these variables are plain values (such as firstStation or randomValue), while others are objects containing their own values.
+Some of these variables are plain string or number values (such as firstStation or randomValue), while others are objects containing their own values.  Here is a list of the kinds of objects visible in a template, and the values attached to each.
 
-Layout:
-Layout.currentDate
-  Usually formatted with a template filter to draw the date in a sane manner.  
-
-Layout.layoutName
-  The layout description as entered into the Layout tab of SwitchList.
-
-Layout.allStationsSortedOrder
-  List of all stations / places on the layout, sorted alphabetically.
-
-Layout.allIndustries
-  List of all industries.  Unsorted.
-
-Train:
-Train.name   string name for train.
-
-Train.freightCars
-  list of freight cars in the train in no order.
-Train.freightCarsInVisitOrder:
-  list of freight cars in the train, sorted by the order that towns will be visited.
-
-FreightCar:
-FreightCar.reportingMarks
-  String containing owning railroad and car number ("SP 27310")
-
-FreightCar.initials:
-  String containing railroad initials only. (Car "SP 27310" would return "SP")
-
-FreightCar.number:
-  String containing car number only.  (Car "SP 27310" would return "27310")
-
-Cargo.name:
-  short description of cargo.
-Cargo.description:
-  long description of cargo, including what kind of car and how many cars per week.
-
-
-FreightCar.isLoaded:
-  YES if loaded, NO if empty.
-
-FreightCar.carType
-  
-FreightCar.currentLocation
-  industry or yard where car is currently located. (Industry object.)
-
-FreightCar.nextStop:
-  destination this session.  (Industry object.)
-
-Industry:
-Industry.location
-  containing town
-
-Industry.name
-
-Station / Place
-Place.name
-
-Place.allIndustriesSortedOrder
-
-Cargo:
-name: car
-
-
+|| *Layout* || ||
+|| Layout.currentDate ||  Usually formatted with a template filter to draw the date in a sane manner.  ||
+|| Layout.layoutName ||  The layout description as entered into the Layout tab of SwitchList. ||
+|| Layout.allStationsSortedOrder ||   List of all stations / places on the layout, sorted alphabetically. ||
+|| Layout.allIndustries || List of all industries.  Unsorted. ||
+|| *Train* || ||
+|| Train.name   ||string name for train. ||
+|| Train.freightCars ||   list of freight cars in the train in no order. ||
+|| Train.freightCarsInVisitOrder: || list of freight cars in the train, sorted by the order that towns will be visited. ||
+|| *FreightCar* || ||
+|| FreightCar.reportingMarks || String containing owning railroad and car number ("SP 27310") ||
+|| FreightCar.initials || String containing railroad initials only. (Car "SP 27310" would return "SP") ||
+|| FreightCar.number || String containing car number only.  (Car "SP 27310" would return "27310") ||
+|| FreightCar.cargo || Current cargo being carried or assigned to freight car. ||
+|| FreightCar.isLoaded || True if car is carrying cargo.  If false, car may not have a cargo assigned, or may be travelling to the location where the cargo is picked up. ||
+|| FreightCar.carType || Abbreviation for the freight car's type of car (T for tank car, XM for short boxcar, etc.) ||
+|| FreightCar.currentLocation || industry or yard where car is currently located. (Industry object.) ||
+|| FreightCar.nextStop || Destination this session.  (Industry object.) ||
+|| *Cargo* || ||
+||Cargo.name || short description of cargo. ||
+|| Cargo.description ||  long description of cargo, including what kind of car and how many cars per week. 
+|| *Industry* || ||
+|| Industry.location || Town where industry is located. ||
+|| Industry.name || Name of industry. ||
+|| *Station* (Also called place or town) || ||
+|| Station.name || Name of station. ||
+|| Station.allIndustriesSortedOrder ||
   
