--- a/wiki/SwitchListTemplatesInHTML.wiki
+++ b/wiki/SwitchListTemplatesInHTML.wiki
@@ -68,7 +68,7 @@ MGTemplateEngine lets you specify filters which change the form of a string valu
 {{{
 {{layout.layoutName | uppercase}}
 }}}
-would display the layout name in all capital letters.  MGTemplateEngine also defines a dateformat field that allows you to use a  <A HREF="http://unicode.org/reports/tr35/tr35-4.html#Date_Format_Patterns">standard format</a> to let you customize how you display the date.  For example, {{ layout.currentDate | date_format: MM/dd/YY }} displays dates in a form like "3/31/73", while {{ layout.currentDate | date_format: yyyy-MMM-dd}} displays dates in a form like "2007-Mar-12".
+would display the layout name in all capital letters.  MGTemplateEngine also defines a dateformat field that allows you to use a  [http://unicode.org/reports/tr35/tr35-4.html#Date_Format_Patterns standard format] to let you customize how you display the date.  For example, {{ layout.currentDate | date_format: MM/dd/YY }} displays dates in a form like "3/31/73", while {{ layout.currentDate | date_format: yyyy-MMM-dd}} displays dates in a form like "2007-Mar-12".
 
 SwitchList also defines its own handy filters.  The jitter filter adds some random spaces at the beginning, middle, or end of a string so that identical strings arranged vertically won't perfectly line up.  This is very helpful for making switchlists with handwritten fonts look handwritten:
 {{{
@@ -81,6 +81,24 @@ See the default switchlist for an example of jitter's use.
 To create your own special switchlist, create a folder in ~/Library/Application Support/SwitchList with the name of your switch list style, and place a switchlist.html and, if you want, switchlist.css file in there to get started.
 
 For example, if I wanted a new switchlist called "WP", I would make sure the SwitchList folder existed in Library/Application Support, then create a new directory called WP in that folder.  A file in that folder called switchlist.html would hold the template for the switchlist, and a Cascading Style Sheets (CSS) file called "switchlist.css could be placed in the same directory to hold formatting details for the switchlist.  (Look around on the internet for details about CSS files.)   For security, SwitchList only allows files in the template directory to be read from your machine, though a template could load images and other files out on the Internet.
+
+== What's Easy, and What's Hard ==
+
+There are limitations to what can be done in HTML switchlists; generally, typography, graphic layout, and what is printed for each car can be changed easily.  Changing the order that cars are listed, adding special instructions if a particular car is present, and other more complex tasks that require examining all cars is harder to do.  If you run into problems, raise your suggestions on the mailing list, and I'll see what can be done.
+
+On the other hand, I was a bit surprised what could be done just in HTML.  The HTML versions of the built-in templates show how handwriting fonts can be downloaded from Google Web Fonts, and jittery text placed at slightly different locations be done with some random scattering of spaces.
+
+== Other Examples ==
+
+Although all the standard switchlist styles are handled
+by the SwitchList program,
+the HTML versions of these switchlist styles (as seen in the Web interface)
+use HTML templates, just like you'd use for your custom template.
+Check out those examples in the [http://code.google.com/p/switchlist/source/browse/#svn%2Ftrunk%2Fsrc%2Fbuiltin-templates src/builtin-templates directory] in the SwitchList sources.
+The template for the stock "Handwritten" template
+is in the [http://code.google.com/p/switchlist/source/browse/#svn%2Ftrunk%2Fsrc%2Ftemplates%253Fstate%253Dclosed src/templates directory] in the 
+SwitchList source.  You can examine these files from code.google.com's
+code browser.
 
 == Template Variables ==
 
@@ -101,6 +119,10 @@ Some of these variables are plain string or number values (such as firstStation 
 || layoutName ||  The layout description as entered into the Layout tab of SwitchList. ||
 || allStationsSortedOrder ||   List of all stations / places on the layout, sorted alphabetically. ||
 || allIndustries || List of all industries.  Unsorted. ||
+|| stationsWithWork || List of all the stations where the train has cars
+to pick up or drop off.  Each station is just a collection of industries with
+cars to pick up and drop off.  This value is used for drawing the 
+[ http://code.google.com/p/switchlist/source/browse/trunk/src/builtin-templates/PICL%20Report/switchlist.html PICL Report's] web version. ||
 || *Train* || ||
 || name   ||string name for train. ||
 || freightCars ||   list of freight cars in the train in no order. ||
