--- a/wiki/SwitchListTemplatesInHTML.wiki
+++ b/wiki/SwitchListTemplatesInHTML.wiki
@@ -119,9 +119,7 @@ Some of these variables are plain string or number values (such as firstStation 
 || layoutName ||  The layout description as entered into the Layout tab of SwitchList. ||
 || allStationsSortedOrder ||   List of all stations / places on the layout, sorted alphabetically. ||
 || allIndustries || List of all industries.  Unsorted. ||
-|| stationsWithWork || List of all the stations where the train has cars
-to pick up or drop off.  Each station is just a collection of industries with
-cars to pick up and drop off.  Used for drawing the PICL report. ||
+|| stationsWithWork || List of all the stations where the train has cars to pick up or drop off.  Each station is just a collection of industries with cars to pick up and drop off.  Used for drawing the PICL report. ||
 || *Train* || ||
 || name   ||string name for train. ||
 || freightCars ||   list of freight cars in the train in no order. ||
