Edited wiki page NewSwitchListStyle through web user interface.

--- a/wiki/NewSwitchListStyle.wiki
+++ b/wiki/NewSwitchListStyle.wiki
@@ -1,4 +1,4 @@
-#summary Learn how to create your own SwitchList printed forms.
+#summary Learn how to create your own SwitchList printed forms.  (More complex, but more flexibility.)
 
 
 = Creating New SwitchList Styles =
