--- a/wiki/ProjectGoals.wiki
+++ b/wiki/ProjectGoals.wiki
@@ -11,7 +11,7 @@ If you're interested in contributing to SwitchList, keep these goals in mind as 
 
 *Make it a great Macintosh application.*  SwitchList will be a great, native Macintosh application with an approachable and polished UI.  It should be easy to pick up and easy to use.
 
-*Make it work well on small layouts.* The primary use case is smaller layouts that want to do realistic operations.
+*Make it work well on small layouts.*  There's plenty of switchlist programs intended for huge, complex layouts, but what do modelers with more modest layouts need?  The primary use case is smaller layouts that want to do realistic operations.
 
 *Make it realistic*.  While SwitchList's paperwork must be useful in the layout room, that can't mean it can't be realistic.  Forms should look like the prototype railroad's.
 
